--- a/py_course/flow_control_statements/2.itaration&Looping_statements/For_loop/practice.ipynb
+++ b/py_course/flow_control_statements/2.itaration&Looping_statements/For_loop/practice.ipynb
@@ -32,19 +32,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "7\n"
+      "14\n",
+      "13\n"
      ]
     }
    ],
    "source": [
-    "a=b'111'\n",
+    "a=b'1110'\n",
     "b=0\n",
     "n=len(a)\n",
     "for i in range(0,len(a)):\n",
@@ -54,7 +55,8 @@
     "        f=0\n",
     "    b+=f*2**((len(a)-1)-i)\n",
     "print(b)\n",
-    "\n"
+    "a=0b1101\n",
+    "print(a)\n"
    ]
   },
   {
