--- a/py_course/flow_control_statements/2.itaration&Looping_statements/while_loop/assignment.ipynb
+++ b/py_course/flow_control_statements/2.itaration&Looping_statements/while_loop/assignment.ipynb
@@ -475,10 +475,70 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "120\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=5\n",
+    "b=1\n",
+    "pro=1\n",
+    "while b<=5:\n",
+    "    pro*=b\n",
+    "    b+=1\n",
+    "print(pro)\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "26.WAP to print the factorial numbers in the given range m to n."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 => 1\n",
+      "2 => 2\n",
+      "3 => 6\n",
+      "4 => 24\n",
+      "5 => 120\n",
+      "6 => 720\n",
+      "7 => 5040\n",
+      "8 => 40320\n",
+      "9 => 362880\n",
+      "10 => 3628800\n"
+     ]
+    }
+   ],
+   "source": [
+    "m=1\n",
+    "n=10\n",
+    "while m<=n:\n",
+    "    ppro=1\n",
+    "    a=m\n",
+    "    b=1\n",
+    "    while b<=a:\n",
+    "        ppro*=b\n",
+    "        b+=1\n",
+    "    print(f'{m} => {ppro}')\n",
+    "    m+=1\n",
+    "\n"
    ]
   },
   {
