--- a/py_course/flow_control_statements/2.itaration&Looping_statements/while_loop/practice.ipynb
+++ b/py_course/flow_control_statements/2.itaration&Looping_statements/while_loop/practice.ipynb
@@ -1702,6 +1702,319 @@
     "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "#wap to count the number of characters in given string\n",
+    "a='string'\n",
+    "b=len(a)\n",
+    "count=0\n",
+    "while b:\n",
+    "    count+=1\n",
+    "    b=b-1\n",
+    "print(count)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "unsupported operand type(s) for -: 'str' and 'str'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[20], line 10\u001b[0m\n\u001b[0;32m      8\u001b[0m     \u001b[39mbreak\u001b[39;00m\n\u001b[0;32m      9\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m---> 10\u001b[0m     c\u001b[39m=\u001b[39ma[b:]\u001b[39m-\u001b[39;49ma\n\u001b[0;32m     11\u001b[0m     b\u001b[39m+\u001b[39m\u001b[39m=\u001b[39m\u001b[39m1\u001b[39m\n\u001b[0;32m     12\u001b[0m     i\u001b[39m+\u001b[39m\u001b[39m=\u001b[39m\u001b[39m1\u001b[39m\n",
+      "\u001b[1;31mTypeError\u001b[0m: unsupported operand type(s) for -: 'str' and 'str'"
+     ]
+    }
+   ],
+   "source": [
+    "#wap to count the number of characters in given string withount using len()\n",
+    "a='string'\n",
+    "i=0\n",
+    "b=0\n",
+    "c=0\n",
+    "while a:\n",
+    "    if a=='':\n",
+    "        break\n",
+    "    else:\n",
+    "        c=a[b:]-a\n",
+    "        b+=1\n",
+    "        i+=1\n",
+    "print(b)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "#wap to count the number of characters in given string withount using len()\n",
+    "st='hello'\n",
+    "count=0\n",
+    "while st:\n",
+    "    # print(st)\n",
+    "    count+=1\n",
+    "    st=st[i:-1]\n",
+    "print(count)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "#wap to count uppercase characters from string\n",
+    "a='stiNG'\n",
+    "b=0\n",
+    "st=0\n",
+    "while b<len(a):\n",
+    "    if 'A'<=a[b]<='Z':\n",
+    "        st+=1\n",
+    "    b+=1\n",
+    "print(st)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ing\n"
+     ]
+    }
+   ],
+   "source": [
+    "#wap to extract and store the lowercase chr from given string\n",
+    "a='STRing'\n",
+    "b=''\n",
+    "c=0\n",
+    "while c<len(a):\n",
+    "    if 'a'<=a[c]<='z':\n",
+    "        b+=a[c]\n",
+    "    c+=1\n",
+    "print(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "$##77\n"
+     ]
+    }
+   ],
+   "source": [
+    "#wap to extract and store the special char and ascii number in the given string\n",
+    "a='STRing$##77'\n",
+    "b=''\n",
+    "c=0\n",
+    "while c<len(a):\n",
+    "    if not('A'<=a[c]<='Z' or 'a'<=a[c]<='z'):\n",
+    "        b+=a[c]\n",
+    "    c+=1\n",
+    "print(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ing\n",
+      "STR\n",
+      "33\n",
+      "#@@\n"
+     ]
+    }
+   ],
+   "source": [
+    "#wap to segrigate the string in new variable\n",
+    "a='STRing#33@@'\n",
+    "b='';c=0;d='';e='';f=''\n",
+    "while c<len(a):\n",
+    "    if 'a'<=a[c]<='z':\n",
+    "        b+=a[c]\n",
+    "    elif 'A'<=a[c]<='Z':\n",
+    "        d+=a[c]\n",
+    "    elif '0'<=a[c]<='9':\n",
+    "        e+=a[c]\n",
+    "    else:\n",
+    "        f+=a[c]\n",
+    "    c+=1\n",
+    "print(b)\n",
+    "print(d)\n",
+    "print(e)\n",
+    "print(f)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Im2@@nKn valid password\n"
+     ]
+    }
+   ],
+   "source": [
+    "#wap check given password is valid or not\n",
+    "# if valid, display valid pasword with given string\n",
+    "# if not,\n",
+    "#constraints: min two special char,min 1 number char, min 1 lowercse chr,min 2 uppercase chr\n",
+    "#passwors should be 8 char\n",
+    "# a='asAS@@14541'\n",
+    "# a='DSSS3##'\n",
+    "a=input('enter password')\n",
+    "b=a\n",
+    "c=0\n",
+    "uc=0\n",
+    "lc=0\n",
+    "sp=0\n",
+    "nu=0\n",
+    "while c<len(a):\n",
+    "    if b[c] in a:\n",
+    "        # print(b[c])\n",
+    "        if 'A'<=b[c]<='Z':\n",
+    "            uc+=1\n",
+    "        elif 'a'<=b[c]<='z':\n",
+    "            lc+=1\n",
+    "        elif '0'<=b[c]<='9':\n",
+    "            nu+=1\n",
+    "        else:\n",
+    "            sp+=1\n",
+    "    c+=1  \n",
+    "if uc>=2 and lc>=1 and sp>=2 and nu>=1:\n",
+    "    if  uc+lc+sp+nu==8:\n",
+    "        print(f'{a} valid password')\n",
+    "else:\n",
+    "        print('invalid password')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "invalid password\n"
+     ]
+    }
+   ],
+   "source": [
+    "# #wap to check given email ID valid or not \n",
+    "# # if valid , dspplay email ID\n",
+    "# # IF NOT ,dsplay invalied\n",
+    "# # should not be a special char except @,.\n",
+    "# #should be exact 1 @\n",
+    "# #after @ min 1 . and max 2 .\n",
+    "# #wap check given password is valid or not\n",
+    "# # if valid, display valid pasword with given string\n",
+    "# # if not,\n",
+    "# #constraints: min two special char,min 1 number char, min 1 lowercse chr,min 2 uppercase chr\n",
+    "# #passwors should be 8 char\n",
+    "# # a='asAS@@14541'\n",
+    "# # a='DSSS3##'\n",
+    "# a=input('enter password')\n",
+    "# b=a\n",
+    "# c=0\n",
+    "# uc=0\n",
+    "# lc=0\n",
+    "# sp1=0\n",
+    "# nu=0\n",
+    "# sp2=0\n",
+    "# while c<len(a):\n",
+    "#     if b[c] in a:\n",
+    "#         # print(b[c])\n",
+    "#         if 'A'<=b[c]<='Z':\n",
+    "#             uc+=1\n",
+    "#         elif 'a'<=b[c]<='z':\n",
+    "#             lc+=1\n",
+    "#         elif '0'<=b[c]<='9':\n",
+    "#             nu+=1\n",
+    "#         elif b[c]=='@':\n",
+    "#             sp1+=1\n",
+    "#         elif b[c]=='.':\n",
+    "#             sp2+=1\n",
+    "#         else:\n",
+    "#             print('invalid')\n",
+    "#             break\n",
+    "#     c+=1  \n",
+    "# if uc>=2 and lc>=1 and nu>=1 ==1 :\n",
+    "#     if  uc+lc+sp+nu==8:\n",
+    "#         print(f'{a} valid password')\n",
+    "# else:\n",
+    "#         print('invalid password')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
