--- a/py_course/flow_control_statements/2.itaration&Looping_statements/while_loop/assignment.ipynb
+++ b/py_course/flow_control_statements/2.itaration&Looping_statements/while_loop/assignment.ipynb
@@ -79,35 +79,157 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "3.WAP to print the natural number until 1 to nth times by using a while loop.\n"
+    "3.WAP to print the natural number until 1 to nth times by using a while loop."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=10\n",
+    "b=1\n",
+    "while b<=a:\n",
+    "    print(b)\n",
+    "    b+=1\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "4.WAP to print the reverse of the natural number nth to 0 times by using a while loop.\n"
+    "4.WAP to print the reverse of the natural number nth to 0 times by using a while loop."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "9\n",
+      "8\n",
+      "7\n",
+      "6\n",
+      "5\n",
+      "4\n",
+      "3\n",
+      "2\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "n=10\n",
+    "while n:\n",
+    "    print(n)\n",
+    "    n-=1"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "5.WAP to print the whole number until nth times by using a while loop.\n"
+    "5.WAP to print the whole number until nth times by using a while loop."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=10\n",
+    "b=0\n",
+    "while b<=a:\n",
+    "    print(b)\n",
+    "    b+=1\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "6.WAP to print the reverse of the whole number until nth times by using a while loop.\n"
+    "6.WAP to print the reverse of the whole number until nth times by using a while loop."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "9\n",
+      "8\n",
+      "7\n",
+      "6\n",
+      "5\n",
+      "4\n",
+      "3\n",
+      "2\n",
+      "1\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=10\n",
+    "while a:\n",
+    "    print(a)\n",
+    "    a-=1\n",
+    "    if a==0:\n",
+    "        print(a)\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "7.WAP to print the even number until nth times by using a while loop.\n"
+    "7.WAP to print the even number until nth times by using a while loop."
    ]
   },
   {
@@ -140,7 +262,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "8.WAP to print reserve the even number until nth times by using a while loop.\n"
+    "8.WAP to print reserve the even number until nth times by using a while loop."
    ]
   },
   {
@@ -172,14 +294,65 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "9.WAP to print the odd number until nth times by using a while loop.\n"
+    "9.WAP to print the odd number until nth times by using a while loop."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "3\n",
+      "5\n",
+      "7\n",
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "n=10\n",
+    "a=1\n",
+    "while a<=n:\n",
+    "    if a%2==1:\n",
+    "        print(a)\n",
+    "    a+=1"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "10.WAP to print reserve the odd number until nth times by using a while loop.\n"
+    "10.WAP to print reserve the odd number until nth times by using a while loop."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9\n",
+      "7\n",
+      "5\n",
+      "3\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "n=10\n",
+    "while n:\n",
+    "    if n%2==1:\n",
+    "        print(n)\n",
+    "    n-=1"
    ]
   },
   {
@@ -355,7 +528,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "15.WAP to print the numbers which are divisible by 5 and 7 from 77 to 22.\n"
+    "15.WAP to print the numbers which are divisible by 5 and 7 from 77 to 22."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "35\n",
+      "70\n"
+     ]
+    }
+   ],
+   "source": [
+    "n=77\n",
+    "a=22\n",
+    "while a<=n:\n",
+    "    if a%5==0 and a%7==0:\n",
+    "        print(a)\n",
+    "    a+=1"
    ]
   },
   {
@@ -415,68 +611,269 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "17.WAP to print sum of the 1 to nth natural numbers.\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "18.WAP to print sum of the even numbers 1 to 20 numbers.\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "19.WAP to print products of the 1 to 6 numbers.\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "20.WAP to count the no of odd values from 1 to 30 numbers.\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "21.WAP to print the factors of the given number.\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "22.WAP to sum of the factors of the given number.\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "23.WAP to prod of the factors of the given number.\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "24.WAP to print Fibonacci series 0 to nth.\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "25.WAP to find out the factorial number of a given number.\n"
+    "17.WAP to print sum of the 1 to nth natural numbers."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "55\n"
+     ]
+    }
+   ],
+   "source": [
+    "n=10\n",
+    "a=0\n",
+    "sum=0\n",
+    "while a<=n:\n",
+    "    sum+=a\n",
+    "    a+=1\n",
+    "print(sum)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "18.WAP to print sum of the even numbers 1 to 20 numbers."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "110\n"
+     ]
+    }
+   ],
+   "source": [
+    "n=20\n",
+    "a=0\n",
+    "sum=0\n",
+    "while a<=n:\n",
+    "    if a%2==0:\n",
+    "        sum+=a\n",
+    "    a+=1\n",
+    "print(sum)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "19.WAP to print products of the 1 to 6 numbers."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "720\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=1\n",
+    "n=6\n",
+    "b=1\n",
+    "while a<=n:\n",
+    "    b*=a\n",
+    "    a+=1\n",
+    "print(b)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "20.WAP to count the no of odd values from 1 to 30 numbers."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=1\n",
+    "n=30\n",
+    "count=0\n",
+    "while a<=n:\n",
+    "    if a%2!=0:\n",
+    "        count+=1\n",
+    "    a+=1\n",
+    "print(count)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "21.WAP to print the factors of the given number."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "4\n",
+      "8\n"
+     ]
+    }
+   ],
+   "source": [
+    "n=8\n",
+    "a=1\n",
+    "while a<=n:\n",
+    "    if n%a==0:\n",
+    "        print(a)\n",
+    "    a+=1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "22.WAP to sum of the factors of the given number."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15\n"
+     ]
+    }
+   ],
+   "source": [
+    "n=8\n",
+    "a=1\n",
+    "b=0\n",
+    "while a<=n:\n",
+    "    if n%a==0:\n",
+    "        b+=a\n",
+    "    a+=1\n",
+    "print(b)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "23.WAP to prod of the factors of the given number."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "64\n"
+     ]
+    }
+   ],
+   "source": [
+    "n=8\n",
+    "a=1\n",
+    "b=1\n",
+    "while a<=n:\n",
+    "    if n%a==0:\n",
+    "        b*=a\n",
+    "    a+=1\n",
+    "print(b)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "24.WAP to print Fibonacci series 0 to nth."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "5\n",
+      "8\n"
+     ]
+    }
+   ],
+   "source": [
+    "n=5\n",
+    "a=0\n",
+    "b=1\n",
+    "print(a)\n",
+    "print(b)\n",
+    "m=0\n",
+    "while n:\n",
+    "    m=a+b\n",
+    "    print(m)\n",
+    "    a,b=b,m\n",
+    "\n",
+    "    n-=1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "25.WAP to find out the factorial number of a given number."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -491,7 +888,7 @@
     "a=5\n",
     "b=1\n",
     "pro=1\n",
-    "while b<=5:\n",
+    "while b<=a:\n",
     "    pro*=b\n",
     "    b+=1\n",
     "print(pro)\n"
@@ -545,35 +942,131 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "27.WAP to check whether a given number is a prime number or not.\n"
+    "27.WAP to check whether a given number is a prime number or not."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10 not a prime number\n"
+     ]
+    }
+   ],
+   "source": [
+    "n=10\n",
+    "a=1\n",
+    "count=0\n",
+    "while a<=n:\n",
+    "    if n%a==0:\n",
+    "        count+=1\n",
+    "    a+=1\n",
+    "if 1<=count<=2:\n",
+    "    print(f'{n} is prime number')\n",
+    "else:\n",
+    "    print(f'{n} not a prime number')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "28.WAP to print the prime numbers in the given range m to n.\n"
+    "28.WAP to print the prime numbers in the given range m to n."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 not a prime number\n",
+      "1 is prime number\n",
+      "2 is prime number\n",
+      "3 is prime number\n",
+      "4 not a prime number\n",
+      "5 is prime number\n"
+     ]
+    }
+   ],
+   "source": [
+    "n1=0\n",
+    "n2=5\n",
+    "while n1<=n2:\n",
+    "    n=n1\n",
+    "    a=1\n",
+    "    count=0\n",
+    "    while a<=n:\n",
+    "        if n%a==0:\n",
+    "            count+=1\n",
+    "        a+=1\n",
+    "    if 1<=count<=2:\n",
+    "        print(f'{n} is prime number')\n",
+    "    else:\n",
+    "        print(f'{n} not a prime number')\n",
+    "    n1+=1"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "29.WAP to check whether a given number is an armstrong number or not.\n"
+    "29.WAP to check whether a given number is an armstrong number or not."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "30.WAP to print the armstrong numbers in the given range m to n.\n"
+    "30.WAP to print the armstrong numbers in the given range m to n."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "31.Write a program to print prime series 1 to nth.\n"
+    "31.Write a program to print prime series 1 to nth."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 prime number\n",
+      "2 prime number\n",
+      "3 prime number\n",
+      "5 prime number\n",
+      "7 prime number\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=0\n",
+    "n=10\n",
+    "while a<=n:\n",
+    "    b=a\n",
+    "    c=1\n",
+    "    count=0\n",
+    "    while c<=b:\n",
+    "        if b%c==0:\n",
+    "            count+=1\n",
+    "        c+=1\n",
+    "    if 1<=count<=2:\n",
+    "        print(f'{a} prime number')\n",
+    "    a+=1"
    ]
   },
   {
