--- a/py_course/flow_control_statements/2.itaration&Looping_statements/while_loop/practice.ipynb
+++ b/py_course/flow_control_statements/2.itaration&Looping_statements/while_loop/practice.ipynb
@@ -697,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -710,14 +710,13 @@
       "2\n",
       "3\n",
       "5\n",
-      "8\n",
-      "13\n"
+      "8\n"
      ]
     }
    ],
    "source": [
     "#wap to print febonacci series upto n\n",
-    "n=20\n",
+    "n=10\n",
     "b=n\n",
     "f=0\n",
     "s=1\n",
@@ -1729,39 +1728,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "unsupported operand type(s) for -: 'str' and 'str'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[20], line 10\u001b[0m\n\u001b[0;32m      8\u001b[0m     \u001b[39mbreak\u001b[39;00m\n\u001b[0;32m      9\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m---> 10\u001b[0m     c\u001b[39m=\u001b[39ma[b:]\u001b[39m-\u001b[39;49ma\n\u001b[0;32m     11\u001b[0m     b\u001b[39m+\u001b[39m\u001b[39m=\u001b[39m\u001b[39m1\u001b[39m\n\u001b[0;32m     12\u001b[0m     i\u001b[39m+\u001b[39m\u001b[39m=\u001b[39m\u001b[39m1\u001b[39m\n",
-      "\u001b[1;31mTypeError\u001b[0m: unsupported operand type(s) for -: 'str' and 'str'"
-     ]
-    }
-   ],
-   "source": [
-    "#wap to count the number of characters in given string withount using len()\n",
-    "a='string'\n",
-    "i=0\n",
-    "b=0\n",
-    "c=0\n",
-    "while a:\n",
-    "    if a=='':\n",
-    "        break\n",
-    "    else:\n",
-    "        c=a[b:]-a\n",
-    "        b+=1\n",
-    "        i+=1\n",
-    "print(b)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 23,
    "metadata": {},
    "outputs": [
@@ -2004,10 +1970,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "valid => pysp.ider@gmail.co.edu\n"
+     ]
+    }
+   ],
+   "source": [
+    "st='pysp.ider@gmail.co.edu'\n",
+    "x=0\n",
+    "temp=0\n",
+    "while x<len(st):\n",
+    "    if not('A'<=st[x]<='Z' or 'a'<=st[x]<='z' or '0'<=st[x]<='9' or st[x] in '@.'):\n",
+    "        temp+=1\n",
+    "    x+=1\n",
+    "if temp==0:\n",
+    "    if '@' in st and '.' in st:\n",
+    "        start=0\n",
+    "        pos=None\n",
+    "        count=0\n",
+    "        while start<len(st):\n",
+    "            if '@'==st[start]:\n",
+    "                pos=start\n",
+    "                count+=1\n",
+    "            start+=1\n",
+    "        if count==1:\n",
+    "            # print(pos)\n",
+    "            if '.' in st[pos:]:\n",
+    "                c=0\n",
+    "                i=pos\n",
+    "                while i<len(st):\n",
+    "                    if '.'==st[i]:\n",
+    "                        c+=1\n",
+    "                    i+=1\n",
+    "                if 1<=c<=2:\n",
+    "                    print(f'valid => {st}')\n",
+    "                else:\n",
+    "                    print('invalide email')\n",
+    "            else:\n",
+    "                print('not valid')\n",
+    "        else:\n",
+    "            print('invalid_2')\n",
+    "    else:\n",
+    "        print('invalid_3')\n",
+    "else:\n",
+    "    print('invalid_4')"
+   ]
   },
   {
    "cell_type": "code",
