--- a/py_course/flow_control_statements/2.itaration&Looping_statements/while_loop/assignment.ipynb
+++ b/py_course/flow_control_statements/2.itaration&Looping_statements/while_loop/assignment.ipynb
@@ -832,7 +832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -845,12 +845,17 @@
       "2\n",
       "3\n",
       "5\n",
-      "8\n"
+      "8\n",
+      "13\n",
+      "21\n",
+      "34\n",
+      "55\n",
+      "89\n"
      ]
     }
    ],
    "source": [
-    "n=5\n",
+    "n=10\n",
     "a=0\n",
     "b=1\n",
     "print(a)\n",
@@ -860,7 +865,6 @@
     "    m=a+b\n",
     "    print(m)\n",
     "    a,b=b,m\n",
-    "\n",
     "    n-=1"
    ]
   },
@@ -947,26 +951,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10 not a prime number\n"
+      "7 is prime number\n"
      ]
     }
    ],
    "source": [
-    "n=10\n",
+    "n=7\n",
     "a=1\n",
     "count=0\n",
     "while a<=n:\n",
     "    if n%a==0:\n",
     "        count+=1\n",
     "    a+=1\n",
-    "if 1<=count<=2:\n",
+    "if count==2:\n",
     "    print(f'{n} is prime number')\n",
     "else:\n",
     "    print(f'{n} not a prime number')"
@@ -1073,7 +1077,48 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "32.Write a program to print 1 to 100 prime numbers in fibonacci series\n"
+    "32.Write a program to print 1 to 100 prime numbers in fibonacci series"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2 prime number\n",
+      "3 prime number\n",
+      "5 prime number\n",
+      "13 prime number\n",
+      "89 prime number\n"
+     ]
+    }
+   ],
+   "source": [
+    "n=10\n",
+    "a=0\n",
+    "b=1\n",
+    "print(a)\n",
+    "print(b)\n",
+    "m=0\n",
+    "while n:\n",
+    "    m=a+b\n",
+    "    # print(m)\n",
+    "    x=1\n",
+    "    count=0\n",
+    "    while x<=m:\n",
+    "        if m%x==0:\n",
+    "            count+=1\n",
+    "        x+=1\n",
+    "    if count==2:\n",
+    "        print(f'{m} prime number')\n",
+    "    a,b=b,m\n",
+    "    n-=1"
    ]
   },
   {
