--- a/py_course/flow_control_statements/2.itaration&Looping_statements/while_loop/assignment.ipynb
+++ b/py_course/flow_control_statements/2.itaration&Looping_statements/while_loop/assignment.ipynb
@@ -2245,6 +2245,54 @@
     "#         pass\n",
     "#     b+=1"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "htilal\n"
+     ]
+    }
+   ],
+   "source": [
+    "#wap to reverse the string using while_loop\n",
+    "a='lalith'\n",
+    "b=''\n",
+    "c=1\n",
+    "while c<=len(a):\n",
+    "    b+=a[-(c)]\n",
+    "    c+=1\n",
+    "print(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "HTILAL\n"
+     ]
+    }
+   ],
+   "source": [
+    "a='LALITH'\n",
+    "b=''\n",
+    "c=-len(a)\n",
+    "while c:\n",
+    "    b=a[c]+b\n",
+    "    c+=1\n",
+    "    # print(b)\n",
+    "print(b)"
+   ]
   }
  ],
  "metadata": {
