--- a/py_course/flow_control_statements/2.itaration&Looping_statements/while_loop/practice.ipynb
+++ b/py_course/flow_control_statements/2.itaration&Looping_statements/while_loop/practice.ipynb
@@ -2017,10 +2017,160 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "p\n",
+      "lol\n"
+     ]
+    }
+   ],
+   "source": [
+    "#31-08-23\n",
+    "#wap to extract dublicate characters from given string\n",
+    "a='pspi'\n",
+    "s=''\n",
+    "b=0\n",
+    "u=''\n",
+    "while b<len(a):\n",
+    "    if a[b] in s:\n",
+    "        u+=a[b]\n",
+    "    else:\n",
+    "        s+=a[b]\n",
+    "    b+=1\n",
+    "print(u)\n",
+    "#------------------\n",
+    "st='helloworld'\n",
+    "uni=''\n",
+    "b=0\n",
+    "dup=''\n",
+    "while b<len(st):\n",
+    "    if st[b] not in uni:\n",
+    "        uni+=st[b]\n",
+    "    else:\n",
+    "        dup+=st[b]\n",
+    "    b+=1\n",
+    "print(dup)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# st='helloworld'\n",
+    "# v=''\n",
+    "# b=0\n",
+    "# while b<len(st):\n",
+    "#     if st[b] in v:\n",
+    "\n",
+    "#     b+=1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "helowrd\n",
+      "h1e1l3o2w1r1d1\n"
+     ]
+    }
+   ],
+   "source": [
+    "#wap to count the each character in given string (occurence: count how many times each character occured)\n",
+    "st='helloworld'\n",
+    "res=''\n",
+    "x=0\n",
+    "while x<len(st):\n",
+    "    if st[x] not in res:\n",
+    "        res+=st[x]\n",
+    "    x+=1\n",
+    "print(res)\n",
+    "temp=''\n",
+    "j=0\n",
+    "while j<len(res):\n",
+    "    count=0\n",
+    "    start=0\n",
+    "    while start<len(st):\n",
+    "        if res[j]==st[start]:\n",
+    "            count+=1\n",
+    "        start+=1\n",
+    "    temp+=res[j]+str(count)\n",
+    "    j+=1\n",
+    "print(temp)\n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'h': 1, 'e': 1, 'l': 3, 'o': 2, 'w': 1, 'r': 1, 'd': 1}\n"
+     ]
+    }
+   ],
+   "source": [
+    "#wap to count the each character in given string (occurence: count how many times each character occured)\n",
+    "#using dictionary\n",
+    "st='helloworld'\n",
+    "res={}\n",
+    "start=0\n",
+    "while start<len(st):\n",
+    "    if st[start] not in res:\n",
+    "        res[st[start]]=1\n",
+    "    else:\n",
+    "        res[st[start]]+=1\n",
+    "    start+=1\n",
+    "print(res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#wap to reverse the string using while_loop\n",
+    "a='lalith'\n",
+    "b=''\n",
+    "c=1\n",
+    "while c<=len(a):\n",
+    "    b+=a[-(c)]\n",
+    "    c+=1\n",
+    "print(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a='LALITH'\n",
+    "b=''\n",
+    "c=-len(a)\n",
+    "while c:\n",
+    "    b=a[c]+b\n",
+    "    c+=1\n",
+    "    # print(b)\n",
+    "print(b)"
+   ]
   }
  ],
  "metadata": {
