--- a/py_course/flow_control_statements/2.itaration&Looping_statements/while_loop/assignment.ipynb
+++ b/py_course/flow_control_statements/2.itaration&Looping_statements/while_loop/assignment.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -412,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -459,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -501,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -564,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -616,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -646,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -677,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -707,7 +707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -738,7 +738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -770,7 +770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -801,7 +801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -832,7 +832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -877,7 +877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -907,7 +907,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -951,7 +951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -985,7 +985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -1028,7 +1028,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -1067,7 +1067,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -1125,7 +1125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -1165,7 +1165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -1213,7 +1213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -1251,7 +1251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -1285,7 +1285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -1323,7 +1323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -1376,7 +1376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -1429,7 +1429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -1466,7 +1466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -1510,7 +1510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
@@ -1563,7 +1563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
@@ -1605,7 +1605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
@@ -1649,7 +1649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
@@ -1702,7 +1702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
@@ -1743,7 +1743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -1784,7 +1784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
@@ -1825,7 +1825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
@@ -1866,7 +1866,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
@@ -1907,7 +1907,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
@@ -1948,7 +1948,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
@@ -1989,7 +1989,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
@@ -2020,7 +2020,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
@@ -2053,7 +2053,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
@@ -2095,15 +2095,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "18\n",
-      "9\n",
       "9\n"
      ]
     }
@@ -2134,7 +2132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
@@ -2165,36 +2163,148 @@
    "source": [
     "56.wap to find max product of three numbers from the given integer array\n",
     "input arr()=6,3,2,0,10\n",
-    " example:10*6*2\n",
+    " example:10*6*3\n",
     " output:180"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10\n"
-     ]
-    },
-    {
-     "ename": "IndexError",
-     "evalue": "list index out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[82], line 12\u001b[0m\n\u001b[0;32m     10\u001b[0m c\u001b[39m=\u001b[39m\u001b[39m0\u001b[39m\n\u001b[0;32m     11\u001b[0m \u001b[39mwhile\u001b[39;00m c\u001b[39m<\u001b[39m\u001b[39mlen\u001b[39m(a):\n\u001b[1;32m---> 12\u001b[0m     \u001b[39mif\u001b[39;00m res\u001b[39m<\u001b[39ma[c] \u001b[39mand\u001b[39;00m a[b]\u001b[39m<\u001b[39mj:\n\u001b[0;32m     13\u001b[0m         k\u001b[39m=\u001b[39ma[c]\n\u001b[0;32m     14\u001b[0m     c\u001b[39m+\u001b[39m\u001b[39m=\u001b[39m\u001b[39m1\u001b[39m\n",
-      "\u001b[1;31mIndexError\u001b[0m: list index out of range"
+      "1000\n"
      ]
     }
    ],
    "source": [
-    "# a=[0,6,3,2,0,10,0]\n",
+    "n=[0,6,3,1000,2,0,10,0,1]\n",
+    "x=0\n",
+    "l=n[x]\n",
+    "while x<len(n):\n",
+    "    if n[x]>l:\n",
+    "        l=n[x]\n",
+    "    x+=1\n",
+    "print(l)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1000\n",
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "n=[0,6,3,100,2,0,1000,0,1]\n",
+    "x=0\n",
+    "l=n[x]\n",
+    "while x<len(n):\n",
+    "    if n[x]>l:\n",
+    "        l=n[x]\n",
+    "    x+=1\n",
+    "print(l)\n",
+    "a=0\n",
+    "pos=0\n",
+    "while a<len(n):\n",
+    "    if n[a]!=1000:\n",
+    "        pos+=1\n",
+    "    else:\n",
+    "        break\n",
+    "    a+=1\n",
+    "print(pos)\n",
+    "del(n[6])\n",
+    "# print(n)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "180\n"
+     ]
+    }
+   ],
+   "source": [
+    "n=[0,6,3,10,2,0,0,1]\n",
+    "# x=0\n",
+    "# l=n[x]\n",
+    "# sum=[]\n",
+    "sum=1\n",
+    "a=0\n",
+    "while a<3:\n",
+    "    x=0\n",
+    "    l=n[x]\n",
+    "    while x<len(n):\n",
+    "        if n[x]>l:\n",
+    "            l=n[x]\n",
+    "        x+=1\n",
+    "    # print(l)\n",
+    "    # sum+=[l]\n",
+    "    sum*=l\n",
+    "    ab=0\n",
+    "    pos=0\n",
+    "    while ab<len(n):\n",
+    "        if n[ab]!=l:\n",
+    "            pos+=1\n",
+    "        else:\n",
+    "            del n[pos]\n",
+    "            break\n",
+    "        ab+=1\n",
+    "    # print(pos)\n",
+    "    # print(n)\n",
+    "    a+=1\n",
+    "print(sum)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n=[0,6,3,1000,2,0,10,0,1]\n",
+    "x=0\n",
+    "l=n[x]\n",
+    "while x<len(n):\n",
+    "    if n[x]>l:\n",
+    "        l=n[x]\n",
+    "    x+=1\n",
+    "print(l)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# a=[0,6,3,1000,2,0,10,0,1]\n",
     "# res=0\n",
     "# b=0\n",
     "# sum=1\n",
@@ -2208,90 +2318,27 @@
     "#     if res<a[c] and a[c]<j:\n",
     "#         k=a[c]\n",
     "#     c+=1\n",
-    "# print(k)\n",
+    "# # print(k)\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6\n",
-      "6\n",
-      "6\n",
-      "6\n",
-      "10\n",
-      "10\n"
+      "1800\n"
      ]
     }
    ],
    "source": [
-    "# a=[0,6,3,2,0,10,0]\n",
-    "# b=0\n",
-    "# while b<len(a):\n",
-    "#     c=a[b]\n",
-    "#     # print(a[b])\n",
-    "#     # print(c)\n",
-    "#     if b+1<len(a):\n",
-    "#         if c<a[b+1] and b+1<len(a):\n",
-    "#             g=a[b+1]\n",
-    "#         print(g)\n",
-    "#     else:\n",
-    "#         pass\n",
-    "#     b+=1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "htilal\n"
-     ]
-    }
-   ],
-   "source": [
-    "#wap to reverse the string using while_loop\n",
-    "a='lalith'\n",
-    "b=''\n",
-    "c=1\n",
-    "while c<=len(a):\n",
-    "    b+=a[-(c)]\n",
-    "    c+=1\n",
-    "print(b)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "HTILAL\n"
-     ]
-    }
-   ],
-   "source": [
-    "a='LALITH'\n",
-    "b=''\n",
-    "c=-len(a)\n",
-    "while c:\n",
-    "    b=a[c]+b\n",
-    "    c+=1\n",
-    "    # print(b)\n",
-    "print(b)"
+    "a=[0,6,10,3,2,0,1]\n",
+    "b=sorted(a)\n",
+    "print(b[-1]*b[-2]*b[-3])\n"
    ]
   }
  ],
